Fixed headerbar alignment issues

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 .headerbar td {
 	margin: 0px;
 	padding: 0px;
+	vertical-align: middle;
 }
 
 .headerbar td.leftbuttons {
@@ -27,8 +28,7 @@
 
 .headerbar td.homebutton {
 	text-align:center;
-	padding: 0.2em;
-	padding: 0.2em 0em 0.2em 0.4em;
+	padding: 0.15em 0em 0.15em 0.4em;
 	width: 2.2em;
 }
 
@@ -36,6 +36,7 @@
 	width: 1.8em;
 	height: 1.8em;
 	border: 1px solid #eee;
+	vertical-align: middle;
 }
 
 .headerbar td.helpbutton {
@@ -52,12 +53,15 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	vertical-align: middle;
+	padding-top: 0.1em;
 }
 
 .headerbar td img {
 	width: 1.9em;
 	padding: 0px;
 	margin: 0px;
+	vertical-align: middle;
 }
 
 
